# LouvreTemplate

./: LICENSE  README.md  meson.build
src/: Assets.cpp  Client.h  Compositor.cpp  Compositor.h  Global.cpp  Global.h  Output.cpp  Output.h  Seat.cpp  SessionLockManager.cpp  SessionLockManager.h  Settings.h  Surface.cpp  Surface.h  Systemd.cpp  main.cpp
src/input/: Clipboard.cpp  Clipboard.h  DND.cpp  DND.h  Keyboard.cpp  Keyboard.h  Pointer.cpp  Pointer.h  Seat.cpp  Seat.h  Touch.cpp  Touch.h
src/roles/: CursorRole.cpp  CursorRole.h  DNDIconRole.cpp  DNDIconRole.h  LayerRole.cpp  LayerRole.h  PopupRole.cpp  PopupRole.h  SessionLockRole.cpp  SessionLockRole.h  SubsurfaceRole.cpp  SubsurfaceRole.h  ToplevelRole.cpp  ToplevelRole.h
src/scene/: LayerView.cpp  LayerView.h  SSD.cpp  SSD.h  SSDTouchable.cpp  SSDTouchable.h  Scene.cpp  Scene.h  SolidColorButtonView.cpp  SolidColorButtonView.h  SurfaceView.cpp  SurfaceView.h  ToplevelDecorationView.cpp  ToplevelDecorationView.h
src/utils/: Assets.h  Global.cpp  Settings.h  Systemd.cpp  Systemd.h
